--- a/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Details.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Details.cshtml
@@ -1,8 +1,7 @@
 ﻿@model Aghsat.Domain.Entity.Product
 
 @{
-    ViewBag.Title = "Details";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    Layout = null;// "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Details</h2>
