--- a/01.UI/Aghsat.UI/Views/Shared/_Layout.cshtml
+++ b/01.UI/Aghsat.UI/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
 
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top"  style="border-bottom: 1px  solid red;">
         <button class="uk-button   uk-button-default " type="button" uk-toggle="target: #offcanvas-push"><span uk-icon="menu"></span></button>
         <button type="button" class="uk-button uk-button-secondary uk-box-shadow-hover-medium" onclick="toastr.info('faojfso')">mesage</button>
 
