--- a/01.UI/Aghsat.UI/Areas/Admin/Views/CategoryManagment/Index.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/CategoryManagment/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
-
 }
 
 @Html.Partial("_SubjectForm")
 <div id="List">
     @Html.Action("ShowList")
 </div>
+@Html.Partial("_Modal")
