--- a/01.UI/Aghsat.UI/Areas/Admin/Views/CategoryManagment/_CreateCategory.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/CategoryManagment/_CreateCategory.cshtml
@@ -1,9 +1,6 @@
 ﻿@model Aghsat.ViewModel.Category.Category_Add_vm
 
 
-
-@Scripts.Render("~/bundles/jqueryval")
-
 @Html.Partial("_SubjectForm")
 
 <br />
@@ -40,6 +37,23 @@
         </div>
 
         <div class="form-group">
+            <div class="input-group  input-group-sm">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">
+                        @Html.DisplayNameFor(x => x.ModifeDate)
+                    </span>
+                </div>
+                @Html.TextBoxFor(x => x.ModifeDate, new { @class = " DatePersion form-control uk-input" })
+                <div class="input-group-prepend">
+                    <span class="input-group-text">
+                        @Html.ValidationMessageFor(x => x.ModifeDate, "", new { @class = "text-danger " })
+                    </span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="form-group">
             @Html.DropDownListFor(x => x.ParentCategoryId, new SelectList(Model.SubCategories, "Id", "Name"), "انتخاب کنید", new { @class = "form-control" })
         </div>
 
@@ -62,11 +76,8 @@
                 </div>
             </div>
         </div>
-        <input type="text" id="demoDatePersion" class="DatePersion" placeholder="select date" />
+        <input type="text" class="DatePersion" />
 
-        <input type="text" id="demo3" class="DatePersion" placeholder="select date" />
-
-        <input type="text" id="demo2" class="DatePersion" placeholder="select date" />
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -74,7 +85,17 @@
         </div>
     </div>
 }
-@Scripts.Render("~/bundles/CustomScripts")
+
+<script>
+    $(document).ready(function () {
+        // $('#dtCategory').dataTable({
+        $(".DatePersion").persianDatepicker({formatDate: "YYYY/MM/DD",isRTL: 1
+        });
+    });
+
+
+</script>
+@Scripts.Render("~/bundles/jqueryval")
 
 @*<script>
 
