--- a/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/_ShowListProduct.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/_ShowListProduct.cshtml
@@ -1,19 +1,7 @@
 ﻿
 
-
 @model IEnumerable<Aghsat.ViewModel.Product.Product_List_vm>
 
-@ViewBag?.test[0].ToString()
-@ViewBag?.test[1]
-@ViewBag?.test[2]
-@if (ViewBag.test != null)
-{
-    @foreach (var item in ViewBag.test)
-    {
-        <p>  @item</p>
-
-    }
-}
 <div class=" table-responsive  bg-light p-3">
 
     <div class="float-right dt-buttons btn-group ">
@@ -30,50 +18,53 @@
         {
             <table id="dtCategory" style="width: 100%" class="table  data-Table table-dark  table-hover  table-bordered text-center">
                 <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(row => row.CategoryName)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.UnitName)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Name)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductDate)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.MainImage)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.CreateDate)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ModifeDate)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.IsDeleted)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.IsActive)
-                        </th>
-                        <th></th>
-                    </tr>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(row => row.CategoryName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.UnitName)
+                    </th>
+
+                    <th>
+                        @Html.DisplayNameFor(model => model.ProductDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.MainImage)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CreateDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ModifeDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.IsDeleted)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.IsActive)
+                    </th>
+                    <th></th>
+                </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model)
                     {
                         <tr>
+                            
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.CategoryName)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.UnitName)
                             </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </td>
+
                             <td>
                                 @Html.DisplayFor(modelItem => item.ProductDate)
                             </td>
@@ -94,24 +85,24 @@
                             </td>
                             <td class="btn-group   ">
                                 @*@Html.ActionLink("Edit", "Edit", new { id = item.Id }) |*@
-                                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                                @Ajax.ActionLink(" ",MVC.Admin.ProductsManagment.Edit(item.Id),new AjaxOptions
+                                @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                                @Ajax.ActionLink(" ", MVC.Admin.ProductsManagment.Edit(item.Id), new AjaxOptions
                                 {
-                                    UpdateTargetId= "Modal_Body", // <-- DOM element ID to update
+                                    UpdateTargetId = "Modal_Body", // <-- DOM element ID to update
                                     InsertionMode = InsertionMode.Replace, // <-- Replace the content of DOM element
-                                    HttpMethod = "GET" ,// <-- HTTP method
+                                    HttpMethod = "GET", // <-- HTTP method
                                     OnComplete = "ShowModal"
-                                },new {@class= "btn btn-sm  fa fa-edit bg-light  " })
+                                }, new {@class = "btn btn-sm  fa fa-edit bg-light  "})
 
                                 @*@Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
-                                @Ajax.ActionLink(" ", MVC.Admin.ProductsManagment.Delete(item.Id) , new AjaxOptions
+                                @Ajax.ActionLink(" ", MVC.Admin.ProductsManagment.Delete(item.Id), new AjaxOptions
                                 {
                                     UpdateTargetId = "List", // <-- DOM element ID to update
                                     InsertionMode = InsertionMode.Replace, // <-- Replace the content of DOM element
-                                    HttpMethod = "Post" // <-- HTTP method
+                                    HttpMethod = "GET" // <-- HTTP method
                                     //UpdateTargetId = "List", // <-- DOM element ID to update
 
-                                }, new {@class = "btn  btn-warning btn-sm fa fa-remove " })
+                                }, new {@class = "btn  btn-warning btn-sm fa fa-remove "})
                             </td>
                         </tr>
                     }
@@ -120,16 +111,37 @@
         }
         else
         {
+            <br />
+
             <div uk-alert class="   bg-secondary text-white  text-right">
                 <a class="uk-alert-close" uk-close></a>
-                <span class="fa fa-exclamation-circle fa-2x"></span>
-                <p>هیچ محصولی ثبت نشده است</p>
+                <p class="mb-2">
+                    <span class="fa fa-exclamation-circle fa-2x"></span>
+                    هیچ محصولی ثبت نشده است
+                </p>
             </div>
         }
     }
 
 </div>
+<script>
+        
+    $(document).ready(function () {
+        // $('#dtCategory').dataTable({
+        $('table.data-Table').dataTable({
+            retrieve: true,
+            dom: 'Bfrtip',
+            buttons: [
+                'copy', 'csv', 'excel', 'print'
+            ],
 
+            "language": {
+                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Persian.json"
+            }
+        });
+    });
+
+</script>
 @*<script>
 
         $(document).ready(function () {
