--- a/01.UI/Aghsat.UI/Areas/Admin/Views/Shared/_SubjectForm.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/Shared/_SubjectForm.cshtml
@@ -1,3 +1,4 @@
-﻿<div class="">
-    <span class="uk-alert  bg-light text-right ">  <span class="@ViewBag.Icon">  @ViewBag.Title</span> </span>
+﻿
+<div class="  uk-alert  bg-light text-right p-3 uk-lightbox-page   border border-dark" >
+     <h4><span class="@ViewBag.Icon">  </span> @ViewBag.Title</h4>
 </div>
