--- a/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Delete.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Delete.cshtml
@@ -1,96 +1,21 @@
-﻿@model Aghsat.Domain.Entity.Product
+﻿@model  int
 
-@{
-    ViewBag.Title = "Delete";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
-}
+@Html.Partial("_SubjectForm")
 
-<h2>Delete</h2>
+<div class="border border-dark  bg-light p-3">
+    <h3>آیا اطلاعات خواسته شده حذف گردد؟</h3>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Category.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Unit.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Unit.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ProductDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ProductDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MainImage)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MainImage)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifeDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModifeDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsDeleted)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Ajax.BeginForm(MVC.Admin.ProductsManagment.Delete(Model), new AjaxOptions
+    {
+        HttpMethod = "Post",
+        UpdateTargetId = "List",
+        OnSuccess = "Hide"
+    }))
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-default fa fa-remove" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
