--- a/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Details.cshtml
+++ b/01.UI/Aghsat.UI/Areas/Admin/Views/ProductsManagment/Details.cshtml
@@ -1,90 +1,102 @@
-﻿@model Aghsat.Domain.Entity.Product
+﻿@model  Aghsat.ViewModel.Product.Product_Detail_vm
+    @{
+        /**/
 
-@{
-    Layout = null;// "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
-}
+        Layout = ViewBag.lodaFromMain != null && ViewBag.lodaFromMain == true ?
+            "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml" : null;
 
-<h2>Details</h2>
+        //Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    }
 
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Category.Name)
-        </dt>
+    <h2>Details</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
+    <div>
+        <h4>Product</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.CategoryName)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Unit.Name)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.CategoryName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Unit.Name)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.UnitName)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.UnitName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ProductDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ProductDate)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ProductDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MainImage)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ProductDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.MainImage)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.MainImage)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.MainImage)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.CreateDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifeDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.CreateDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ModifeDate)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ModifeDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ModifeDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsDeleted)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.IsDeleted)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.IsDeleted)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.IsActive)
+            </dt>
 
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+            <dd>
+                @Html.DisplayFor(model => model.IsActive)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
+        @Ajax.ActionLink(" ", MVC.Admin.ProductsManagment.Edit(Model?.Id), new AjaxOptions
+        {
+            UpdateTargetId = "Modal_Body", // <-- DOM element ID to update
+            InsertionMode = InsertionMode.Replace, // <-- Replace the content of DOM element
+            HttpMethod = "GET", // <-- HTTP method
+            OnComplete = "ShowModal"
+        }, new {@class = "uk-button uk-button-default   bg-light  uk-button-small  fa fa-edit " })
+
+        @Html.ActionLink("Back to List", "Index")
+    </p>
