--- a/01.UI/Aghsat.UI/Content/Site.css
+++ b/01.UI/Aghsat.UI/Content/Site.css
@@ -27,7 +27,7 @@ textarea {
     margin-top: auto;
 }
 
-.uk-offcanvas-bar {
+.uk-offcanvas-bar .uk-card-default {
     background-color: #dee2e6 !important;
 }
 
